# teko-turtle

./: .gitignore  LICENSE  README.md
.github/workflows/: ci.yml  cutting-board-drawers-optimizer.yml
Assignments/01_Sequences/Assignment_01/: assignment_01_1.py  assignment_01_4.py
Assignments/01_Sequences/Assignment_02/: assignment_02_1.py  assignment_02_2.py
Assignments/01_Sequences/Assignment_03/: assignment_03_01.py  assignment_03_02.py
Assignments/02_Simple_Data_Structures/: assignment_01.py  assignment_02.py  assignment_03.py
Assignments/03_Selection/: assignment_01_1.py  assignment_01_2.py  assignment_01_3.py  assignment_02_1.py  assignment_02_2.py  assignment_02_3.py  assignment_bank_note_serial.py
Assignments/04_Iterations/: assignment_01_1.py  assignment_01_2_a.py  assignment_01_2_b.py  assignment_01_2_c.py  assignment_01_3.py  assignment_02_1.py  assignment_02_2.py  assignment_02_3.py  assignment_02_4.py  assignment_02_5.py  assignment_02_6.py  assignment_02_7.py  assignment_03_1.py  assignment_04_1.py  assignment_04_2.py  assignment_04_3.py  assignment_04_4.py  assignment_04_5.py  assignment_04_6.py  assignment_05_1.py  assignment_05_2.py  assignment_05_3.py  assignment_06_1.py  assignment_07_1.py
Assignments/05_Prozeduren/: assignment_01_1.py  assignment_01_2.py  assignment_01_3.py  assignment_01_4.py  assignment_01_5.py  assignment_01_6.py  assignment_02_1.py  assignment_02_2.py  assignment_02_3.py  assignment_02_4.py  assignment_02_5.py  assignment_03_fibonacci.py  assignment_03_point_in_circle.py  assignment_03_the_divider.py
Assignments/06_Files/: assignment_06_1_1.py
Assignments/06_Files/assignment_06_1_2/: README.md  birthdate.py  database.py  main.py  student.py
Assignments/06_Files/assignment_06_1_2/ui/: __init__.py  add_student.py  csv_export.py  delete_student.py  list_students.py  menu.py  month_with_most_birthdays.py  people_with_same_birthday.py  table.py  update_student.py
Assignments/Assignment_01/: assignment_01_1_custom.py  assignment_01_2.py  assignment_01_3.py
Graded_Assignments/cutting-board-drawers-optimizer/: LICENSE.txt  Presentation.md  README.md  pyproject.toml
Graded_Assignments/cutting-board-drawers-optimizer/examples/: complete.json  without_optimization_settings.json
Graded_Assignments/cutting-board-drawers-optimizer/src/cutting_board_drawers_optimizer/: __about__.py  __init__.py  __main__.py
Graded_Assignments/cutting-board-drawers-optimizer/src/cutting_board_drawers_optimizer/optimizer/: __init__.py  cutting_board.py  drawer.py  drawer_state.py  optimizer.py
Graded_Assignments/cutting-board-drawers-optimizer/src/cutting_board_drawers_optimizer/state/: __init__.py  _state_data.py  loading_data_failed_error.py  saving_data_failed_error.py  state.py
Graded_Assignments/cutting-board-drawers-optimizer/src/cutting_board_drawers_optimizer/ui/: __init__.py  app.py  create_cutting_board.py  create_drawer.py  cutting_board_manager.py  cutting_board_table.py  drawer_manager.py  drawer_table.py  edit_cutting_board.py  edit_drawer.py  load_dialog.py  optimize_manager.py  save_dialog.py  validator.py
Graded_Assignments/cutting-board-drawers-optimizer/tests/: __init__.py  test_cutting_board.py  test_drawer.py  test_main.py
Graded_Assignments/cutting-board-drawers-optimizer/tests/optimizer/: test_cutting_board.py  test_drawer.py  test_optimizer.py
Graded_Assignments/cutting-board-drawers-optimizer/tests/state/: test_state.py  test_state_data.py
Graded_Assignments/cutting-board-drawers-optimizer/tests/ui/: test_app.py  test_app_integration.py  test_create_cutting_board.py  test_create_drawer.py  test_cutting_board_manager.py  test_cutting_board_table.py  test_drawer_manager.py  test_drawer_table.py  test_edit_cutting_board.py  test_edit_drawer.py  test_load_dialog.py  test_optimize_manager.py  test_save_dialog.py  test_validator.py
Graded_Assignments/cutting_board_drawers_optimizer/: .pylintrc  Makefile  README.md  pyproject.toml
Graded_Assignments/cutting_board_drawers_optimizer/src/: cutting_board.py  drawer.py  main.py
Graded_Assignments/cutting_board_drawers_optimizer/tests/: test_cutting_board.py  test_drawer.py
shapes/: Shape.py  Square.py  __init__.py
