[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cutting-board-drawers-optimizer"
dynamic = ["version"]
description = ''
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = []
authors = [
  { name = "David Docampo", email = "david@opsone.ch" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = []

[project.urls]
Documentation = "https://github.com/David Docampo/cutting-board-drawers-optimizer#readme"
Issues = "https://github.com/David Docampo/cutting-board-drawers-optimizer/issues"
Source = "https://github.com/David Docampo/cutting-board-drawers-optimizer"

[tool.hatch.version]
path = "src/cutting_board_drawers_optimizer/__about__.py"

[tool.hatch.envs.types]
extra-dependencies = [
  "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/cutting_board_drawers_optimizer tests}"

[tool.coverage.run]
source_pkgs = ["cutting_board_drawers_optimizer", "tests"]
branch = true
parallel = true
omit = [
  "src/cutting_board_drawers_optimizer/__about__.py",
]

[tool.coverage.paths]
cutting_board_drawers_optimizer = ["src/cutting_board_drawers_optimizer", "*/cutting-board-drawers-optimizer/src/cutting_board_drawers_optimizer"]
tests = ["tests", "*/cutting-board-drawers-optimizer/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
