[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cutting-board-drawers-optimizer"
dynamic = ["version"]
description = 'An application for calculating which cutting boards optimally fit into which kitchen drawers'
readme = "README.md"
requires-python = ">=3.13"
license = "MIT"
keywords = []
authors = [
  { name = "David Docampo", email = "david@docampo.ch" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
  "textual==6.6.0"
]

[project.optional-dependencies]
dev = [
  "textual-dev==1.8.0"
]
test = [
  "pytest==9.0.1",
  "pytest-cov==7.0.0",
  "pytest-asyncio==1.3.0",
]

[project.urls]
Documentation = "https://github.com/David Docampo/cutting-board-drawers-optimizer#readme"
Issues = "https://github.com/SayHeyD/teko-turtle/issues"
Source = "https://github.com/SayHeyD/teko-turtle"

[tool.hatch.version]
path = "src/cutting_board_drawers_optimizer/__about__.py"

[tool.hatch.envs.types]
extra-dependencies = [
  "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/cutting_board_drawers_optimizer tests}"

[tool.hatch.envs.hatch-test]
# Reuse your optional dependency group so pytest/pytest-cov are installed
features = ["test"]

[tool.hatch.envs.hatch-test.scripts]
run = "pytest{env:HATCH_TEST_ARGS:} {args}"
run-cov = "coverage run -m pytest{env:HATCH_TEST_ARGS:} {args}"
cov-combine = "coverage combine"
cov-report = "coverage report"
# Add this line
cov-html = "coverage html"

[tool.coverage.run]
source_pkgs = ["cutting_board_drawers_optimizer", "tests"]
branch = true
parallel = true
omit = [
  "src/cutting_board_drawers_optimizer/__about__.py",
]

[tool.coverage.paths]
cutting_board_drawers_optimizer = ["src/cutting_board_drawers_optimizer", "*/cutting-board-drawers-optimizer/src/cutting_board_drawers_optimizer"]
tests = ["tests", "*/cutting-board-drawers-optimizer/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]

[tool.coverage.html]
directory = "cover"  # default is "htmlcov"
title = "cutting-board-drawers-optimizer coverage"

[tool.ruff.lint]
# Lint application code, but not tests
exclude = ["tests/**"]

