[project]
name = "cutting_board_drawers_optimizer"
version = "0.0.0"
requires-python = ">= 3.13"
readme = "README.md"
license = "MIT"
authors = [
    {name = "David Docampo", email = "david@docampo.ch"},
]
dependencies = [
    "linkify-it-py==2.0.3",
    "markdown-it-py==4.0.0",
    "mdit-py-plugins==0.5.0",
    "mdurl==0.1.2",
    "rich==14.2.0",
    "textual==6.6.0",
    "typing-extensions==4.15.0",
    "uc-micro-py==1.0.3"
]

[project.optional-dependencies]
dev = [
    "astroid==4.0.2",
    "dill==0.4.0",
    "isort==7.0.0",
    "mccabe==0.7.0",
    "platformdirs==4.5.0",
    "pylint==4.0.3",
    "tomlkit==0.13.3",
    "autopep8==2.3.2",
    "pycodestyle==2.14.0",
    "iniconfig==2.3.0",
    "packaging==25.0",
    "pluggy==1.6.0",
    "pygments==2.19.2",
    "pytest==9.0.1",
    "MarkupSafe==3.0.3",
    "aiohappyeyeballs==2.6.1",
    "aiohttp==3.13.2",
    "aiohttp-jinja2==1.6",
    "aiosignal==1.4.0",
    "attrs==25.4.0",
    "click==8.3.1",
    "frozenlist==1.8.0",
    "idna==3.11",
    "jinja2==3.1.6",
    "msgpack==1.1.2",
    "multidict==6.7.0",
    "propcache==0.4.1",
    "textual-dev==1.8.0",
    "textual_serve==1.1.3",
    "yarl==1.22.0"
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = ["--import-mode=importlib"]

[project.urls]
Repository = "https://github.com/SayHeyD/teko-turtle.git"
Issues = "https://github.com/SayHeyD/teko-turtle/issues"